Cambios varios a servicio web

--- a/WSInterfaceDyn/Web.config
+++ b/WSInterfaceDyn/Web.config
@@ -23,7 +23,7 @@
   </configSections>
   <appSettings>
     <add key="DynamicsUG.DynamicsUG" value="http://dg.galileo.edu/core/DynamicsUG.asmx"/>
-  <add key="WSExpediente.service" value="http://dg.galileo.edu/dg/service.asmx"/>
+  <add key="WSExpediente.service" value="http://dg.galileo.edu/dgpruebas/service.asmx"/>
   </appSettings>
   <connectionStrings>
     <add name="Galileo" connectionString="Data Source=galileo;Persist Security Info=True;User ID=reporte;Password=honda2008;Max Pool Size=300" providerName="System.Data.OracleClient"/>
