--- a/WSInterfaceDyn/Web.config
+++ b/WSInterfaceDyn/Web.config
@@ -26,7 +26,9 @@
   <add key="WSExpediente.service" value="http://dg.galileo.edu/dgpruebas/service.asmx"/>
   </appSettings>
   <connectionStrings>
-    <add name="Galileo" connectionString="Data Source=galileo;Persist Security Info=True;User ID=reporte;Password=honda2008;Max Pool Size=300" providerName="System.Data.OracleClient"/>
+    <add name="Galileo" connectionString="Data Source=wdesa;Persist Security Info=True;User ID=reporte;Password=honda2008;Max Pool Size=300" providerName="System.Data.OracleClient"/>
+    <add name="Dynamics" connectionString="Data Source=wdesa;Persist Security Info=True;User ID=dynamics;Password=dynamics;Max Pool Size=300" providerName="System.Data.OracleClient"/>
+    <add name="SQLDAX" connectionString="Data Source=srvdynamicsax;Initial Catalog=DAXPRODGALILEO;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <!-- 
