Cambios a la encriptacion de id de archivos y cambios en en wsfacturas

--- a/WSInterfaceDyn/Web.config
+++ b/WSInterfaceDyn/Web.config
@@ -22,8 +22,8 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="DynamicsUG.DynamicsUG" value="http://dg.galileo.edu/core/DynamicsUG.asmx"/>
-  <add key="WSExpediente.service" value="http://dg.galileo.edu/dgpruebas/service.asmx"/>
+    <add key="DynamicsUG.DynamicsUG" value="https://dg.galileo.edu/core/DynamicsUG.asmx"/>
+  <add key="WSExpediente.service" value="https://dg.galileo.edu/dgpruebas/service.asmx"/>
   </appSettings>
   <connectionStrings>
     <add name="Galileo" connectionString="Data Source=wdesa;Persist Security Info=True;User ID=reporte;Password=honda2008;Max Pool Size=300" providerName="System.Data.OracleClient"/>
