--- a/WSInterfaceDyn/Web.config
+++ b/WSInterfaceDyn/Web.config
@@ -22,13 +22,13 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="DynamicsUG.DynamicsUG" value="https://dg.galileo.edu/core/DynamicsUG.asmx"/>
+    <add key="DynamicsUG.DynamicsUG" value="https://dg.galileo.edu/corePruebas/DynamicsUG.asmx"/>
   <add key="WSExpediente.service" value="https://dg.galileo.edu/dgpruebas/service.asmx"/>
   </appSettings>
   <connectionStrings>
     <add name="Galileo" connectionString="Data Source=wdesa;Persist Security Info=True;User ID=reporte;Password=honda2008;Max Pool Size=300" providerName="System.Data.OracleClient"/>
     <add name="Dynamics" connectionString="Data Source=wdesa;Persist Security Info=True;User ID=dynamics;Password=dynamics;Max Pool Size=300" providerName="System.Data.OracleClient"/>
-    <add name="SQLDAX" connectionString="Data Source=srvdynamicsax;Initial Catalog=DAXPRODGALILEO;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
+    <add name="SQLDAX" connectionString="Data Source=dynamicspruebas;Initial Catalog=DAXPRODGALILEO;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <!-- 
