Cambios a servicios DG y ReceiptsGen por cambio en TLS2 en servidor de DG

--- a/WSInterfaceDyn/Web.config
+++ b/WSInterfaceDyn/Web.config
@@ -23,11 +23,12 @@
   </configSections>
   <appSettings>
     <add key="DynamicsUG.DynamicsUG" value="https://dg.galileo.edu/corePruebas/DynamicsUG.asmx"/>
-  <add key="WSExpediente.service" value="https://dg.galileo.edu/dgpruebas/service.asmx"/>
+    <add key="WSExpediente.service" value="https://dg.galileo.edu/dgpruebas/service.asmx"/>
+  <add key="WSTrans.wstransition" value="http://10.0.3.71/dg/wstransition.asmx"/>
   </appSettings>
   <connectionStrings>
-    <add name="Galileo" connectionString="Data Source=wdesa;Persist Security Info=True;User ID=reporte;Password=honda2008;Max Pool Size=300" providerName="System.Data.OracleClient"/>
-    <add name="Dynamics" connectionString="Data Source=wdesa;Persist Security Info=True;User ID=dynamics;Password=dynamics;Max Pool Size=300" providerName="System.Data.OracleClient"/>
+    <add name="Galileo" connectionString="Data Source=galileo;Persist Security Info=True;User ID=reporte;Password=honda2008;Max Pool Size=300" providerName="System.Data.OracleClient"/>
+    <add name="Dynamics" connectionString="Data Source=galileo;Persist Security Info=True;User ID=dynamics;Password=dynamics;Max Pool Size=300" providerName="System.Data.OracleClient"/>
     <add name="SQLDAX" connectionString="Data Source=dynamicspruebas;Initial Catalog=DAXPRODGALILEO;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
